--- a/Auth/login1.html
+++ b/Auth/login1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Select your Identity Provider</title>
   <script src="solid-client-authn.bundle1.js"></script>
-  <script src="login.js"></script>
+  <script src="login1.js"></script>
 
   <style>
     body, button, input {
